--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -8,19 +8,19 @@
     {% for flash_error in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <h1>Réinitialiser votre mot de passe</h1>
 
         <div class="row mt-5">
             {{ form_start(requestForm) }}
              {{ form_row(requestForm.email) }}
             <div>
                  <small>
-                Enter your email address and we will send you a
-                link to reset your password.
+                     Entrez votre adresse e-mail et nous vous enverrons un
+                     lien pour réinitialiser votre mot de passe.
                  </small>
              </div>
         </div>
-        <button class="btn btn-primary">Send password reset email</button>
+        <button class="btn btn-primary">Envoyer un e-mail pour la réinitialisation du mot de passe</button>
             {{ form_end(requestForm) }}
         </div>
     </div>
