--- a/templates/admin/utilisateurs.html.twig
+++ b/templates/admin/utilisateurs.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="col-3 offset-3">
         <h2>Gestion des Utilisateurs</h2>
-        <form action="{{ path('utilisateurs') }}" method="post">
+        <form action="{{ path('app_utilisateurs') }}" method="post">
             <div class="row">
                 <div class="col-3 offset-1 ">
                     <div class="form-floating">
