fiche animal commit

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -115,6 +115,6 @@
                 crossorigin="anonymous"></script>
 
     {% endblock %}
-
+    {% block endjs %}{% endblock %}
     </body>
 </html>
