mise en place EasyAdmin

--- a/templates/animal/_form.html.twig
+++ b/templates/animal/_form.html.twig
@@ -45,8 +45,8 @@
                                     <li class="list-group-item">{{ form_row(form.collier) }}</li>
                                     <li class="list-group-item">{{ form_row(form.typeColliers) }}</li>
                                     <li class="list-group-item">{{ form_row(form.croisements) }}</li>
-                                    <li class="list-group-item">{{ form_row(form.silhouette) }}</li>
-                                    <li class="list-group-item">{{ form_row(form.taille) }}</li>
+                                    <li class="list-group-item">{{ form_row(form.silhouettes) }}</li>
+                                    <li class="list-group-item">{{ form_row(form.tailles) }}</li>
                                     <li class="list-group-item">{{ form_row(form.poils) }}</li>
                                     <li class="list-group-item">{{ form_row(form.couleurs) }}</li>
                                 </ul>
