--- a/templates/animal/index.html.twig
+++ b/templates/animal/index.html.twig
@@ -51,8 +51,8 @@
                     {% endif %}
 
                 <td>{{ animal.typeColliers }}</td>
-                <td>{{ animal.silhouette }}</td>
-                <td>{{ animal.taille }}</td>
+                <td>{{ animal.silhouettes }}</td>
+                <td>{{ animal.tailles }}</td>
                 <td>{{ animal.poils }}</td>
                 <td>{{ animal.age }}</td>
                 <td>{{ animal.anOuMois }}</td>
