--- a/templates/animal/_form.html.twig
+++ b/templates/animal/_form.html.twig
@@ -25,17 +25,15 @@
                             <div class="col-6">
                                 <ul class="list-group list-group-flush">
                                     <li class="list-group-item">{{ form_row(form.nom) }}</li>
-
-                                    {#                                        <li class="list-group-item">{{ form_row(form.especes) }}</li>#}
-
-                                    {#                                        <li class="list-group-item">{{ form_row(form.races) }}</li>#}
+                                    <li class="list-group-item">{{ form_row(form.especes) }}</li>
+                                    <li class="list-group-item">{{ form_row(form.races) }}</li>
                                     <li class="list-group-item">{{ form_row(form.sexe) }}</li>
                                     <li class="list-group-item">{{ form_row(form.castre) }}</li>
                                     <li class="list-group-item">{{ form_row(form.puceElectro) }}</li>
                                     <li class="list-group-item">{{ form_row(form.tatouage) }}</li>
-                                    <div class="col-6">
-                                        <li class="list-group-item">{{ form_row(form.age) }}</li>
-                                        <li class="list-group-item">{{ form_row(form.anOuMois) }}</li>
+                                    <div class="row md-9">
+                                        <div class="col-6">{{ form_row(form.age) }}</div>
+                                            <div class="col-5">{{ form_row(form.anOuMois) }}</div>
                                     </div>
 
                                 </ul>
@@ -53,7 +51,7 @@
                                 <div class="mt-3 text-center">
 {#                                    <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
                                     <button class="btn">{{ button_label|default('Save') }}</button>
-                                    <a href="{{ path('user_new') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
+                                    <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
                                 </div>
 
                             </div>
