--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -5,51 +5,59 @@
 {% block body %}
     <h1>Declaration index</h1>
 
-{#    <table class="table">#}
-{#        <thead>#}
-{#        <tr>#}
-{#            <th>Id</th>#}
-{#            <th>DateHeureD</th>#}
-{#            <th>InfoSupp</th>#}
-{#            <th>actions</th>#}
-{#        </tr>#}
-{#        </thead>#}
-{#        <tbody>#}
-        {% for declaration in declarations %}
-
-            <div class="card mb-3" style="max-width: 540px;">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <img src="..." class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ declaration.id }}</h5>
-                            <p class="card-text">{{ declaration.infoSupp }}</p>
-                            <p class="card-text"><small class="text-muted">{{ declaration.dateHeureD ? declaration.dateHeureD|date('Y-m-d H:i:s') : '' }}</small></p>
-                            <a href="{{ path('app_declaration_show', {'id': declaration.id}) }}" class="btn btn-primary">Show</a>
-                            <a href="{{ path('app_declaration_edit', {'id': declaration.id}) }}" class="btn btn-primary">Edit</a>
+    {#    <table class="table">#}
+    {#        <thead>#}
+    {#        <tr>#}
+    {#            <th>Id</th>#}
+    {#            <th>DateHeureD</th>#}
+    {#            <th>InfoSupp</th>#}
+    {#            <th>actions</th>#}
+    {#        </tr>#}
+    {#        </thead>#}
+    {#        <tbody>#}
+    {% for declaration in declarations %}
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="card mb-3" style="max-width: 540px;">
+                        <div class="row g-0">
+                            <div class="col-md-4">
+                                <img src="{{ asset('img/logo.jpg') }}" class="img-fluid rounded-start" alt="...">
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ declaration.animaux.nom }}</h5>
+                                    <p class="card-text"><big class="text-muted">{{ declaration.animaux.races.especes }} perdu le
+                                            {{ declaration.dateHeureD ? declaration.dateHeureD|date('Y-m-d') : '' }}
+                                            A {{ declaration.dateHeureD ? declaration.dateHeureD|date('H:i') : '' }}</big></p>
+                                    <p class="card-text"><big class="text-muted">Nom  : {{ declaration.animaux.nom  }}</big></p>
+                                    <p class="card-text"><big class="text-muted">Sexe : {{ declaration.animaux.sexe  }}</big></p>
+                                    <p class="card-text"><big class="text-muted">Race : {{ declaration.animaux.races  }}</big></p>
+                                    {#                                                        <a href="{{ path('app_declaration_show', {'id': declaration.id}) }}" class="btn btn-primary">Show</a>#}
+                                    {#                                                        <a href="{{ path('app_declaration_edit', {'id': declaration.id}) }}" class="btn btn-primary">Edit</a>#}
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-
-{#            <tr>#}
-{#                <td>{{ declaration.id }}</td>#}
-{#                <td>{{ declaration.dateHeureD ? declaration.dateHeureD|date('Y-m-d H:i:s') : '' }}</td>#}
-{#                <td>{{ declaration.infoSupp }}</td>#}
-{#                <td>#}
-{#                    <a href="{{ path('app_declaration_show', {'id': declaration.id}) }}">show</a>#}
-{#                    <a href="{{ path('app_declaration_edit', {'id': declaration.id}) }}">edit</a>#}
-{#                </td>#}
-{#            </tr>#}
-        {% else %}
-{#            <tr>#}
-{#                <td colspan="4">no records found</td>#}
-{#            </tr>#}
-        {% endfor %}
-{#        </tbody>#}
-{#    </table>#}
+        </div>
+        {#            <tr>#}
+        {#                <td>{{ declaration.id }}</td>#}
+        {#                <td>{{ declaration.dateHeureD ? declaration.dateHeureD|date('Y-m-d H:i:s') : '' }}</td>#}
+        {#                <td>{{ declaration.infoSupp }}</td>#}
+        {#                <td>#}
+        {#                    <a href="{{ path('app_declaration_show', {'id': declaration.id}) }}">show</a>#}
+        {#                    <a href="{{ path('app_declaration_edit', {'id': declaration.id}) }}">edit</a>#}
+        {#                </td>#}
+        {#            </tr>#}
+    {% else %}
+        {#            <tr>#}
+        {#                <td colspan="4">no records found</td>#}
+        {#            </tr>#}
+    {% endfor %}
+    {#        </tbody>#}
+    {#    </table>#}
 
     <a href="{{ path('app_annonce_step_one') }}">Create new</a>
 {% endblock %}
