--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -20,8 +20,8 @@
             <h1 class="h3 mb-5 font-weight-normal text-center">Veuillez vous connecter</h1>
             <div class="form-floating mb-3">
                 <input type="text" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3"
-                       autocomplete="email" required autofocus placeholder="Email ou Pseudo">
-                <label for="inputEmail">Email ou Pseudo</label>
+                       autocomplete="email" required autofocus placeholder="Email">
+                <label for="inputEmail">Email </label>
             </div>
             <div class="form-floating mb-3">
                 <input type="password" name="password" id="inputPassword" class="form-control mb-3"
