--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,13 +41,17 @@
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container-fluid px-5">
                     <a class="navbar-brand" href="{{ path('main_home') }}">
-                        <img class="logo" src="{{ asset('img/logo.jpg') }}" width="50" alt="logo">
+                        <img class="logo" src="{{ asset('img/logo.jpg') }}" width="50" alt="logo" color="black">
                         Bienvenue</a>
                     {% if app.user %}
-                        <span class="p-3 badge bg-success">{{ app.user.pseudo }} ConnectÃ©</span>
+                        <span class="p-2 badge bg-success">{{ app.user.pseudo }}   Connecté</span>
                         <li class="nav-item">
-                            <a href="{{ path('_step_one') }}" class="btn btn-outline-success">CrÃ©er
+                            <a href="{{ path('_step_one') }}" class="btn btn-outline-danger">Créer une déclaration
                                 <i class="fa fa-plus"></i></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{{ path('_step_one') }}" class="btn btn-outline-warning"><i class="fa fa-plus"></i>
+                                Créer un signalement </a>
                         </li>
                     {% endif %}
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -60,8 +64,8 @@
 
                             {% if is_granted('ROLE_ADMIN') %}
                                 <li class="nav-item">
-                                    <a href="{{ path('dashboard') }}"
-                                       class="nav-link {% if r == 'dashboard' %}active{% endif %}">ParamÃ¨tre</a>
+                                    <a href="{{ path('admin_dashboard') }}"
+                                       class="nav-link {% if r == 'dashboard' %}active{% endif %}">Paramétre</a>
                                 </li>
                                 {#                                    <li class="nav-item">#}
                                 {#                                        <a href="{{ path('#') }}"#}
@@ -75,11 +79,11 @@
                                     <a href="{{ path('main_home') }}"
                                        class="nav-link {% if r == 'main_home' %}active{% endif %}">Accueil</a>
                                 </li>
-                                <li class="nav-item">
-                                    <a href="{{ path('user_show') }}"
-                                       class="nav-link {% if r == 'user_show' %}active{% endif %}">Mon
-                                        profil</a>
-                                </li>
+{#                                <li class="nav-item">#}
+{#                                    <a href="{{ path('user_edit') }}"#}
+{#                                       class="nav-link {% if r == 'user_show' %}active{% endif %}">Mon#}
+{#                                        profil</a>#}
+{#                                </li>#}
                                 <li class="nav-item ms-5">
                                     <a href="{{ path('app_logout') }}"
                                        class="btn btn-outline-danger">Log out</a>
@@ -161,125 +165,3 @@
 </body>
 </html>
 
-
-
-{#<!DOCTYPE html>#}
-{#<html>#}
-{#    <head>#}
-
-{#        <meta charset="UTF-8">#}
-{#        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>#}
-{#        <meta name="description" content=""/>#}
-{#        <meta name="author" content=""/>#}
-
-{#        <title>#}
-{#            {% block title %}Bienvenue sur le site des animaux perdus!{% endblock %}#}
-{#        </title>#}
-
-
-{#        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22>#}
-{#        <text y=%221.2em%22 font-size=%2296%22></text></svg>">#}
-
-{#        {% block stylesheets %}#}
-{#            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"#}
-{#                  integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="#}
-{#                  crossorigin="anonymous" referrerpolicy="no-referrer"/>#}
-
-{#            <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"#}
-{#                  integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">#}
-
-{#        {% endblock%}#}
-
-
-
-{#    </head>#}
-{#    <body>#}
-
-{#    <div class="container-fluid">#}
-{#        {% set r = app.request.get('_route') %}#}
-
-{#        {% if r != 'app_login' %}#}
-{#            <header>#}
-
-{#                <!-- Responsive navbar-->#}
-{#                <nav class="navbar navbar-expand-lg navbar-dark bg-dark">#}
-{#                    <div class="container-fluid px-5">#}
-{#                        <link rel="stylesheet" href="{{ asset('css/style.css') }}">#}
-{#                        <img class="logo" src="{{ asset('img/logo.jpg') }}" width="50" alt="logo">#}
-{#                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"#}
-{#                                data-bs-target="#navbarSupportedContent"#}
-{#                                aria-controls="navbarSupportedContent" aria-expanded="false"#}
-{#                                aria-label="Toggle navigation"><span#}
-{#                                    class="navbar-toggler-icon"></span></button>#}
-{#                        <div class="collapse navbar-collapse" id="navbarSupportedContent">#}
-{#                            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">#}
-
-{#                            </ul>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </nav>#}
-{#            </header>#}
-
-
-{#        {% endif %}#}
-{#    </div>#}
-{#    <!-- Page Content-->#}
-{#    <div class="container-fluid p-5">#}
-{#        {% block body %}#}
-{#        {% endblock %}#}
-
-{#    </div>#}
-
-{#    <footer class="py-5 bg-dark">#}
-
-{#           <div class="container-xxl">#}
-{#                <div class="container px-4 px-lg-5">#}
-{#                    <p class=" m-0 text-center text-white">Copyright &copy; {{ "now"|date("Y") }} </p>#}
-{#                </div>#}
-{#                <div class="col-md-7 d-flex align-items-center">#}
-
-
-{#                    <a class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1" href=""></a>#}
-
-{#                    <ul class="nav col-md-10 justify-content-end list-unstyled d-flex">#}
-{#                        <li class="ms-3">#}
-{#                                    <span style="font-size: 20px; color: #3171fa;">#}
-{#                                        <i class="fab fa-twitter"></i>#}
-{#                                    </span>#}
-{#                        </li>#}
-
-{#                        <li class="ms-3">#}
-{#                                    <span style="font-size: 20px; color: #3171FAFF;">#}
-{#                                        <i class="fab fa-instagram"></i>#}
-{#                                    </span>#}
-{#                        </li>#}
-
-{#                        <li class="ms-3">#}
-{#                                    <span style="font-size: 20px; color: #3171FAFF;">#}
-{#                                        <i class="fab fa-facebook"></i>#}
-{#                                    </span>#}
-{#                        </li>#}
-{#                    </ul>#}
-{#                </div>#}
-{#          </div>#}
-{#    </footer>#}
-
-{#        <!-- cdn for modernizr, if you haven't included it already -->#}
-{#        <script src="http://cdn.jsdelivr.net/webshim/1.12.4/extras/modernizr-custom.js"></script>#}
-{#        <!-- polyfiller file to detect and load polyfills -->#}
-{#        <script src="http://cdn.jsdelivr.net/webshim/1.12.4/polyfiller.js"></script>#}
-{#        <script>#}
-{#            webshims.setOptions('waitReady', false);#}
-{#            webshims.setOptions('forms-ext', {types: 'date'});#}
-{#            webshims.polyfill('forms forms-ext');#}
-{#        </script>#}
-{#        <!-- Core theme JS-->#}
-{#    {% block javascripts %}#}
-{#        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"#}
-{#                integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"#}
-{#                crossorigin="anonymous"></script>#}
-
-{#    {% endblock %}#}
-{#    {% block endjs %}{% endblock %}#}
-{#    </body>#}
-{#</html>#}
