--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Modification de mon profil {% endblock %}
+{% block title %} Mon profil {% endblock %}
 
 
 {% block body %}
@@ -18,7 +18,7 @@
                             <img src="{{ asset('img/defaut-profile.png')}} " class="img-fluid rounded-start"
                                  alt="Photo profil de {{ user.pseudo }}">
                         {% endif %}
-                    </div
+                    </div>
                     <div class="col-md-9">
                         <div class="card-body">
                             <h5 class="card-title ps-3">{{ user.pseudo }}</h5>
