--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,7 +15,7 @@
 
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22>
         <text y=%221.2em%22 font-size=%2296%22></text></svg>">
-
+    <link rel="icon" type="image/x-icon" href="{{ asset('img/logo.jpg') }}">
     {% block stylesheets %}
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
               integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
@@ -44,10 +44,10 @@
                         <img class="logo" src="{{ asset('img/logo.jpg') }}" width="50" alt="logo" >
                         <small>Animaux Peruds</small></a>
                     {% if app.user %}
-                        <span class="p-2 badge bg-success">{{ app.user.pseudo }}   Connecté</span>
+
                         <li class="nav-item">
-                            <a href="{{ path('_step_one') }}" class="btn btn-outline-danger">Créer une déclaration
-                                <i class="fa fa-plus"></i></a>
+                            <a href="{{ path('_step_one') }}" class="btn btn-outline-danger"> <i class="fa fa-plus"></i>
+                                Créer une déclaration</a>
                         </li>
                         <li class="nav-item">
                             <a href="{{ path('_step_one') }}" class="btn btn-outline-warning"><i class="fa fa-plus"></i>
@@ -79,7 +79,7 @@
 
                                 <li class="nav-item ms-5">
                                     <a href="{{ path('app_logout') }}"
-                                       class="btn btn-outline-danger">Se déconnecter</a>
+                                       class="nav-link">Se déconnecter</a>
                                 </li>
                             {% else%}
                                 <li class="nav-item">
