--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Declaration index{% endblock %}
 
 {% block body %}
-    <h1>Declaration index</h1>
 
+    <p><small><center>Vous avez perdu votre animal? fait vite une déclatation. si vous avez trouvé,
+                aperçu un animal ? fait un signalement </center></small></p>
 
         <div class="container">
             <div class="row">
