--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -41,7 +41,7 @@
                                     </ul>
                                     <div class="mt-3 text-center">
                                         <button class="btn btn-success btn-lg me-5">Enregistrer</button>
-                                        <a href="{{ path('user_index') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
+                                        <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
                                     </div>
                                 </div>
                             </div>
