--- a/templates/declaration/index.html.twig
+++ b/templates/declaration/index.html.twig
@@ -21,8 +21,8 @@
                 <td>{{ declaration.dateHeureD ? declaration.dateHeureD|date('Y-m-d H:i:s') : '' }}</td>
                 <td>{{ declaration.infoSupp }}</td>
                 <td>
-                    <a href="{{ path('app_declaration_show', {'id': declaration.id}) }}">show</a>
-                    <a href="{{ path('app_declaration_edit', {'id': declaration.id}) }}">edit</a>
+                    <a href="{{ path('app_declaration_show', {id: declaration.id}) }}">show</a>
+                    <a href="{{ path('app_declaration_edit', {id: declaration.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -33,5 +33,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_declaration_new') }}">Create new</a>
+    <a href="{{ path('app_annonce_step_one') }}">Create new</a>
 {% endblock %}
