commit signalement+page d'accueil

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -12,14 +12,41 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-4">
-                Commentaires
+            <div class="col-3 my-5 ">
+
+                {% for signalement in signalements %}
+{#                    <div class="d-flex flex-row">#}
+{#                        <div class="col-12">#}
+                            <div class="card mb-1" style="max-width: 540px;">
+{#                                <div class="row g-0">#}
+{#                                    <div class="col-md-8">#}
+                                        <div class="card-body">
+                                            <p class="card-text"><small class="text-muted">
+                                                    {{ signalement.auteur}}</small>
+                                            </p>
+                                            <p class="card-text"><small
+                                                        class="text-muted"> Le
+                                                    {{ signalement.dateHeure ? signalement.dateHeure|date('Y-m-d') : '' }}
+                                                    A {{ signalement.dateHeure ? signalement.dateHeure|date('H:i') : '' }}</small>
+                                            </p>
+                                            <p class="card-text"><small class="text-muted">
+                                                    {{ signalement.message}}</small>
+                                            </p>
+
+                                        </div>
+{#                                    </div>#}
+{#                                </div>#}
+                            </div>
+{#                        </div>#}
+{#                    </div>#}
+
+                {% endfor %}
             </div>
 
-            <div class="col-8">
+            <div class="col-9 my-5">
                 {% for declaration in declarations %}
                     <div class="d-flex flex-row">
-                        <div class="col-4">
+                        <div class="col-6">
                             <div class="card mb-3" style="max-width: 540px;">
                                 <div class="row g-0">
                                     <div class="col-md-4">
@@ -56,6 +83,7 @@
                     </div>
 
                 {% endfor %}
+
             </div>
         </div>
     </div>
