--- a/templates/signalement/_form.html.twig
+++ b/templates/signalement/_form.html.twig
@@ -2,39 +2,43 @@
 {#    {{ form_widget(form) }}#}
 {#    <button class="btn">{{ button_label|default('Save') }}</button>#}
 {#{{ form_end(form) }}#}
+<div class="container">
+    <div class="row">
 
-<div class="row">
-    <div class=" col-10 offset-1">
-        <div class="card mb-3">
-            <div class="row g-0">
-                <div class="col-md-9">
-                    <div class="card-body">
-                        {{ form_start(form) }}
-                        <div class="row mt-5">
-                            <div class="col-6">
-                                <ul class="list-group list-group-flush">
-                                    <div class="row">
-                                        <div class="col-6">{{ form_widget(form.dateHeure.date) }}</div>
-                                        <div class="col-5">{{ form_widget(form.dateHeure.time) }}</div>
-                                    </div>
+        <div class="col-5 offset-4 border py-3 px-5">
 
-                                    <li class="list-group-item">{{ form_row(form.message) }}</li>
-                                </ul>
-                            </div>
+            {{ form_start(form) }}
+            <div class="row mt-5">
 
-                                <div class="mt-3 text-center">
-                                    {#                                    <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
-                                    <button class="btn">{{ button_label|default('Save') }}</button>
-                                    <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
-                                </div>
-
-                            </div>
+                <div class="row">
+                    <div class="col-12">
+                        {{ form_label(form.dateHeure) }}
+                        <div class="row">
+                            <div class="col-7">{{ form_widget(form.dateHeure.date) }}</div>
+                            <div class="col-5">{{ form_widget(form.dateHeure.time) }}</div>
                         </div>
-
-                        {{ form_end(form) }}
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="form-floating mb-3">
+                            {{ form_widget(form.message,{'attr':{'style':'height:150px'}}) }}
+                            <label for="name">{{ form_label(form.message) }}</label>
+                            {{ form_errors(form.message) }}
+                        </div>
+                    </div>
+
+                    <div class="mt-3 text-center">
+                        {#                                    <button class="btn btn-success btn-lg me-5">Enregistrer</button>#}
+                        <button class="btn">{{ button_label|default('Save') }}</button>
+                        <a href="{{ path('main_home') }}" class="btn btn-outline-secondary btn-lg">Retour</a>
+                    </div>
+                </div>
+
             </div>
+
+            {{ form_end(form) }}
+
         </div>
     </div>
 </div>
